tests/ui/nsarray_bound_not_send_sync.stderr
error[E0277]: `UnsafeCell<()>` cannot be shared between threads safely
 --> ui/nsarray_bound_not_send_sync.rs:9:5
  |
9 |     needs_sync::<NSArray<Object, Shared>>();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<()>` cannot be shared between threads safely
  |
  = help: within `objc2::runtime::Object`, the trait `Sync` is not implemented for `UnsafeCell<()>`
  = note: required because it appears within the type `(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)`
  = note: required because it appears within the type `PhantomData<(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)>`
  = note: required because it appears within the type `objc_object`
  = note: required because it appears within the type `objc2::runtime::Object`
  = note: required because of the requirements on the impl of `Sync` for `NSArray<objc2::runtime::Object, Shared>`
note: required by a bound in `needs_sync`
 --> ui/nsarray_bound_not_send_sync.rs:5:27
  |
5 | fn needs_sync<T: ?Sized + Sync>() {}
  |                           ^^^^ required by this bound in `needs_sync`

error[E0277]: `*const UnsafeCell<()>` cannot be shared between threads safely
 --> ui/nsarray_bound_not_send_sync.rs:9:5
  |
9 |     needs_sync::<NSArray<Object, Shared>>();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const UnsafeCell<()>` cannot be shared between threads safely
  |
  = help: within `objc2::runtime::Object`, the trait `Sync` is not implemented for `*const UnsafeCell<()>`
  = note: required because it appears within the type `(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)`
  = note: required because it appears within the type `PhantomData<(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)>`
  = note: required because it appears within the type `objc_object`
  = note: required because it appears within the type `objc2::runtime::Object`
  = note: required because of the requirements on the impl of `Sync` for `NSArray<objc2::runtime::Object, Shared>`
note: required by a bound in `needs_sync`
 --> ui/nsarray_bound_not_send_sync.rs:5:27
  |
5 | fn needs_sync<T: ?Sized + Sync>() {}
  |                           ^^^^ required by this bound in `needs_sync`

error[E0277]: `*const UnsafeCell<()>` cannot be sent between threads safely
 --> ui/nsarray_bound_not_send_sync.rs:9:5
  |
9 |     needs_sync::<NSArray<Object, Shared>>();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const UnsafeCell<()>` cannot be sent between threads safely
  |
  = help: within `objc2::runtime::Object`, the trait `Send` is not implemented for `*const UnsafeCell<()>`
  = note: required because it appears within the type `(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)`
  = note: required because it appears within the type `PhantomData<(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)>`
  = note: required because it appears within the type `objc_object`
  = note: required because it appears within the type `objc2::runtime::Object`
  = note: required because of the requirements on the impl of `Sync` for `NSArray<objc2::runtime::Object, Shared>`
note: required by a bound in `needs_sync`
 --> ui/nsarray_bound_not_send_sync.rs:5:27
  |
5 | fn needs_sync<T: ?Sized + Sync>() {}
  |                           ^^^^ required by this bound in `needs_sync`

error[E0277]: `UnsafeCell<()>` cannot be shared between threads safely
  --> ui/nsarray_bound_not_send_sync.rs:10:5
   |
10 |     needs_send::<NSArray<Object, Shared>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<()>` cannot be shared between threads safely
   |
   = help: within `objc2::runtime::Object`, the trait `Sync` is not implemented for `UnsafeCell<()>`
   = note: required because it appears within the type `(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)`
   = note: required because it appears within the type `PhantomData<(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)>`
   = note: required because it appears within the type `objc_object`
   = note: required because it appears within the type `objc2::runtime::Object`
   = note: required because of the requirements on the impl of `Send` for `NSArray<objc2::runtime::Object, Shared>`
note: required by a bound in `needs_send`
  --> ui/nsarray_bound_not_send_sync.rs:6:27
   |
6  | fn needs_send<T: ?Sized + Send>() {}
   |                           ^^^^ required by this bound in `needs_send`

error[E0277]: `*const UnsafeCell<()>` cannot be shared between threads safely
  --> ui/nsarray_bound_not_send_sync.rs:10:5
   |
10 |     needs_send::<NSArray<Object, Shared>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const UnsafeCell<()>` cannot be shared between threads safely
   |
   = help: within `objc2::runtime::Object`, the trait `Sync` is not implemented for `*const UnsafeCell<()>`
   = note: required because it appears within the type `(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)`
   = note: required because it appears within the type `PhantomData<(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)>`
   = note: required because it appears within the type `objc_object`
   = note: required because it appears within the type `objc2::runtime::Object`
   = note: required because of the requirements on the impl of `Send` for `NSArray<objc2::runtime::Object, Shared>`
note: required by a bound in `needs_send`
  --> ui/nsarray_bound_not_send_sync.rs:6:27
   |
6  | fn needs_send<T: ?Sized + Send>() {}
   |                           ^^^^ required by this bound in `needs_send`

error[E0277]: `*const UnsafeCell<()>` cannot be sent between threads safely
  --> ui/nsarray_bound_not_send_sync.rs:10:5
   |
10 |     needs_send::<NSArray<Object, Shared>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const UnsafeCell<()>` cannot be sent between threads safely
   |
   = help: within `objc2::runtime::Object`, the trait `Send` is not implemented for `*const UnsafeCell<()>`
   = note: required because it appears within the type `(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)`
   = note: required because it appears within the type `PhantomData<(UnsafeCell<()>, *const UnsafeCell<()>, PhantomPinned)>`
   = note: required because it appears within the type `objc_object`
   = note: required because it appears within the type `objc2::runtime::Object`
   = note: required because of the requirements on the impl of `Send` for `NSArray<objc2::runtime::Object, Shared>`
note: required by a bound in `needs_send`
  --> ui/nsarray_bound_not_send_sync.rs:6:27
   |
6  | fn needs_send<T: ?Sized + Send>() {}
   |                           ^^^^ required by this bound in `needs_send`
